--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://kantorcim.blogspot.com/">CAHYA INTAN MEDIKA</a>
+            <a class="navbar-brand" href="#">PT. CIM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,7 +49,7 @@
     </header>
     <div class="container mt-5 pt-5">
         <div class="iframe-wrapper">
-            <iframe src="https://script.google.com/macros/s/AKfycbznWmqLB6Mpu-gZ2RmzQgD1ConFNNsS5mmU-6YCUqHVVCGtfh0H8Palqq1WT6RV1g-9/exec?embedded=true"></iframe>
+            <iframe src="https://script.google.com/macros/s/AKfycbwBqU8f9S36WI-XOD6wqcXM1vCriMK3q3MP8A1rAWdcZWhTgCEHVYIX0EwUq0HtJgJ6hQ/exec?embedded=true"></iframe>
         </div>
     </div>
 
